changed bio colors

--- a/src/index.css
+++ b/src/index.css
@@ -34,9 +34,9 @@ code {
   width: 90%;
   margin-left: 20px;
   padding: 30px;
-  padding-top: 65px;
-  font-size: 1.4em;
-  color: rgb(175, 175, 175);
+  padding-top: 85px;
+  font-size: 1.2em;
+  color: #61fbf4;
   font-family: 'New Tegomin', serif;
 }
 
