color changes for links

--- a/src/index.css
+++ b/src/index.css
@@ -366,3 +366,11 @@ Thumbnail {
   font-size: 2.5em;
   color: white;
 }
+
+.portfolioLinks {
+  color: #61fbf4
+}
+
+.resumeDownload {
+  color:rgb(16, 140, 140)
+}
